--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.aditya.pindrop">
+    package="com.aditya.pindrop" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
@@ -9,27 +9,16 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/icon_128"
+        android:allowBackup="false"
+        android:icon="@drawable/ic_app_40"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/icon_128"
-        android:supportsRtl="true"
+        android:roundIcon="@drawable/ic_app_40"
+        android:supportsRtl="false"
         android:theme="@style/Theme.PinDrop.Launcher"
-        android:usesCleartextTraffic="true">
-
-        <receiver
-            android:name=".GeoFenceReceiver"
-            android:enabled="true"
-            android:exported="true"/>
-
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
-
+        android:usesCleartextTraffic="true" >
         <activity
             android:name=".MapsActivity"
-            android:configChanges="screenLayout|uiMode|orientation"
-            android:label="@string/title_activity_maps">
+            android:configChanges="screenLayout|uiMode|orientation" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,6 +26,14 @@
             </intent-filter>
         </activity>
 
+        <receiver
+            android:name=".GeoFenceReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
     </application>
 
 </manifest>
