--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
-        classpath "io.realm:realm-gradle-plugin:5.11.0"
+        classpath 'com.android.tools.build:gradle:4.1.1'
     }
 }
 
