--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,7 @@
             </intent-filter>
         </activity>
 
-        <receiver
-            android:name=".GeoFenceReceiver"
-            android:enabled="true"
-            android:exported="true" />
+        <receiver android:name=".GeoFenceReceiver" android:enabled="true" android:exported="true"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
